--- a/canvas/triangle2.html
+++ b/canvas/triangle2.html
@@ -17,6 +17,7 @@
 	ctx.lineTo(150,25);
 	ctx.lineTo(25,150);
 	ctx.closePath(); //记得一定要关闭！
+	ctx.lineWidth=5; //设置线条粗细为5px
 	ctx.stroke();
 	</script>
 </body>
